java-plugin/src/test/cases/error/UseBe1n-6-12.java
import io.github.miracelwhipp.constness.annotation.Const;

class UseBean {

    @Const
    public UseBean() {

    }

}